log
Thu 21 Mar 2024 08:22:44 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
6468a3b
Thu 21 Mar 2024 08:25:59 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:15: error: implicit declaration of function ‘firts’; did you mean ‘first’? [-Werror=implicit-function-declaration]
   65 |   int* dato = firts(L);
      |               ^~~~~
      |               first
exercises.c:65:15: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:69:5: error: ‘sumatoria’ undeclared (first use in this function); did you mean ‘sumaria’?
   69 |     sumatoria += *dato;
      |     ^~~~~~~~~
      |     sumaria
exercises.c:69:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:64:7: error: unused variable ‘sumaria’ [-Werror=unused-variable]
   64 |   int sumaria = 0;
      |       ^~~~~~~
exercises.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bedf11c
Thu 21 Mar 2024 08:26:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:69:5: error: ‘sumatoria’ undeclared (first use in this function); did you mean ‘sumaria’?
   69 |     sumatoria += *dato;
      |     ^~~~~~~~~
      |     sumaria
exercises.c:69:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:64:7: error: unused variable ‘sumaria’ [-Werror=unused-variable]
   64 |   int sumaria = 0;
      |       ^~~~~~~
exercises.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
023d0b8
Thu 21 Mar 2024 08:26:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
84ffe56
Thu 21 Mar 2024 08:46:17 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:87:18: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   87 |   int elemento = first(L);
      |                  ^~~~~
exercises.c:89:18: error: comparison between pointer and integer [-Werror]
   89 |   while(elemento != NULL))
      |                  ^~
exercises.c:89:26: error: expected statement before ‘)’ token
   89 |   while(elemento != NULL))
      |                          ^
exercises.c:91:25: error: expected statement before ‘)’ token
   91 |     if(elemento == elem)) popCurrent(L);
      |                         ^
exercises.c:91:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   91 |     if(elemento == elem)) popCurrent(L);
      |     ^~
exercises.c:91:27: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   91 |     if(elemento == elem)) popCurrent(L);
      |                           ^~~~~~~~~~
exercises.c:92:14: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   92 |     elemento = next(L);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
67742db
Thu 21 Mar 2024 08:46:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:26: error: expected statement before ‘)’ token
   89 |   while(elemento != NULL))
      |                          ^
exercises.c:91:17: error: comparison between pointer and integer [-Werror]
   91 |     if(elemento == elem)) popCurrent(L);
      |                 ^~
exercises.c:91:25: error: expected statement before ‘)’ token
   91 |     if(elemento == elem)) popCurrent(L);
      |                         ^
exercises.c:91:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   91 |     if(elemento == elem)) popCurrent(L);
      |     ^~
exercises.c:91:27: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   91 |     if(elemento == elem)) popCurrent(L);
      |                           ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd3c06f
